--- a/android/app/src/dev/res/values/strings.xml
+++ b/android/app/src/dev/res/values/strings.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-   <string name="app_name">[dev] FlutterPresetup</string>
-   <string name="facebook_app_id">facebook-app-id-dev</string>
-   <string name="facebook_client_token">facebook-app-token-dev</string>
-   <string name="admob_id">admob-android-id-dev</string>
+   <string name="app_name">[dev] friends</string>
+
+   <string name="admob_id">ca-app-pub-8564462047490542~9620451441</string>
 </resources>
